--- a/index.html
+++ b/index.html
@@ -8,10 +8,25 @@
   </head>
   <body>
 
-<div class="container">
+<div class="container mt-4">
     <div class="row">
-        <div class="col-sum-12 col-md-12">
+        <div class="col-sum-12  col-md-4 d-block mx-auto">
+<div class="card login-card" ></div>
+    <div class="form-floating mb-3">
+        <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
+        <label for="floatingInput">Email address</label>
+      </div>
+      <div class="form-floating">
+        <input type="password" class="form-control" id="floatingPassword" placeholder="Password">
+        <label for="floatingPassword">Password</label>
+      </div>
 
+<button type="submit" class="btn btn-warning text-warning-emphasis">LOGIN</button>
+
+<button type="button" class="btn btn-outline-primary">create account</button>
+
+
+</div>
         </div>
     </div>
 
@@ -37,7 +52,7 @@
 
 
 
-    <h1>Hello, world!</h1>
+    <h1></h1>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   </body>
 </html>
